# neurogate-limit-watch

./: .env.example  .gitignore  AGENTS.md  AUDIT.md  Cargo.toml  LICENSE  README.md  README.ru.md  ROADMAP.md  SECURITY.md  SUBMISSION.ru.md  build.rs  issue_body.md  overlay_issue.md  pyproject.toml  setup-issues.sh
.cursor/: summary.anchored
.github/DISCUSSION_TEMPLATE/: ideas.yml
.github/workflows/: ci.yml  release.yml
docs/: AGENTS (1).md  AGENTS.md  KONKURS.md  MULTI-AGENT.md  android.md  deep-research-report.md  kimi 2.6 audit.md  setup-issues.sh  termux.md  vimit_floating_overlay.html
nglimit/: __init__.py  abtop.py  cli.py  neurogate.py
packaging/windows/: nglimit-monitor.cmd  nglimit-open.cmd  vimit-monitor.cmd  vimit-open.cmd
scripts/: install.ps1  uninstall.ps1
src/: api.rs  lib.rs  main.rs  parse.rs
src/cli/: accounts.rs  args.rs  cache.rs  config.rs  constants.rs  daily.rs  doctor.rs  init.rs  mod.rs  monitor.rs  notify.rs  output.rs  theme.rs  trends.rs  update.rs
src/cli/snapshots/: nglimit__cli__monitor__tests__tui_snapshot_compact_preset.snap  nglimit__cli__monitor__tests__tui_snapshot_dracula_theme.snap  nglimit__cli__monitor__tests__tui_snapshot_full_preset.snap  nglimit__cli__monitor__tests__tui_snapshot_mini_preset.snap  nglimit__cli__monitor__tests__tui_snapshot_waiting.snap  nglimit__cli__monitor__tests__tui_snapshot_with_error.snap  vimit__cli__monitor__tests__tui_snapshot_compact_preset.snap  vimit__cli__monitor__tests__tui_snapshot_dracula_theme.snap  vimit__cli__monitor__tests__tui_snapshot_full_preset.snap  vimit__cli__monitor__tests__tui_snapshot_high_contrast_theme.snap  vimit__cli__monitor__tests__tui_snapshot_mini_preset.snap  vimit__cli__monitor__tests__tui_snapshot_waiting.snap  vimit__cli__monitor__tests__tui_snapshot_with_error.snap
tests/: test_cli.py  test_neurogate.py
tests/fixtures/: me.json
ui/: app.slint  theme.slint
