[package]
name = "neurogate-limit-watch"
version = "0.5.0"
edition = "2021"
license = "MIT"
authors = ["xodapi"]
description = "Safe NeuroGate quota monitor for Codex/Droid workflows"
repository = "https://github.com/xodapi/neurogate-limit-watch"
readme = "README.md"
default-run = "nglimit"
keywords = ["neurogate", "codex", "droid", "limits", "monitoring"]
categories = ["command-line-utilities"]

[[bin]]
name = "nglimit"
path = "src/main.rs"

[[bin]]
name = "nglimit-gui"
path = "src/bin/nglimit-gui.rs"
required-features = ["gui"]

[features]
default = []
gui = ["dep:slint"]

[dependencies]
chrono = "0.4"
crossterm = "0.28"
ratatui = { version = "0.28", default-features = false, features = ["crossterm"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
slint = { version = "1.16.1", optional = true, default-features = false, features = ["std", "backend-winit", "renderer-software", "compat-1-2"] }
toml = "0.8"

[dev-dependencies]
insta = "1.48"

[build-dependencies]
slint-build = "1.16.1"
