[package]
name = "vimit"
version = "0.6.0"
edition = "2021"
license = "MIT"
authors = ["xodapi"]
description = "Safe VibeMode quota monitor for Codex/Droid workflows"
repository = "https://github.com/xodapi/vimit"
readme = "README.md"
default-run = "vimit"
keywords = ["vibemode", "neurogate", "codex", "droid", "limits", "monitoring"]
categories = ["command-line-utilities"]

[[bin]]
name = "vimit"
path = "src/main.rs"

[[bin]]
name = "vimit-gui"
path = "src/bin/vimit-gui.rs"
required-features = ["gui"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[features]
default = []
gui = ["dep:slint"]

[dependencies]
chrono = "0.4"
crossterm = "0.28"
ratatui = { version = "0.28", default-features = false, features = ["crossterm"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
redb = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
slint = { version = "1.16.1", optional = true, default-features = false, features = ["std", "backend-winit", "renderer-software", "compat-1-2"] }
toml = "0.8"
rand = "0.9"

[dev-dependencies]
insta = "1.48"

[build-dependencies]
slint-build = "1.16.1"
